<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/view">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cartel"
        android:id="@+id/textView"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/design_navigation_icon_padding"
        android:layout_marginTop="@dimen/mgtop_imagen"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/inpNombre"
        android:layout_below="@id/textView"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/EditNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nometiqueta"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/inpEmail"
        android:layout_below="@id/inpNombre"
        android:layout_marginTop="30dp"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/EditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textPostalAddress"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/inpMensaje"
        android:layout_below="@id/inpEmail"
        android:layout_marginTop="30dp"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/EditMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mensaje"
            android:inputType="text"
            android:lines="2"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton"
        android:id="@+id/botEnviar"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/inpMensaje"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_text_size_headline_material" />


</RelativeLayout>